[package]
name = "rr"
version = "2025.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0"
either = { version = "1.14", features = ["serde"] }
anyhow = "1.0"
once_cell = "1.20"
rand = "0.9"
reqwest = "0.12"
tokio = { version = "1.43", features = ["full"] }
tempfile = "3.15"
thiserror = "2.0"
chrono = "0.4"
chrono-tz = "0.10"
rayon = "1.10"
hyper = "1.5"
itertools = "0.14"
# cipher
hex = "0.4"
base64 = "0.22"
hex-literal = "1.0"
digest = "0.10"
sm3 = "0.4"
blake2 = "0.10"
chacha20poly1305 = "0.10"
