[package]
name = "rr"
version = "2025.8.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0"
either = { version = "1.15", features = ["serde"] }
anyhow = "1.0"
inline-option = { version = "0.1", features = ["serde"] }
once_cell = "1.21"
rand = "0.9"
reqwest = "0.12"
num-traits = "0.2"
tempfile = "3.22"
thiserror = "2.0"
chrono = "0.4"
chrono-tz = "0.10"
rayon = "1.11"
ulid = "1.2"
hex = "0.4"
hex-literal = "1.0"
sm3 = "0.4"
blake2 = "0.10"
chacha20poly1305 = "0.10"
trpl = "0.3"
