[package]
name = "rr"
version = "2026.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
chacha20poly1305 = "0.10"
chrono = "0.4"
chrono-tz = "0.10"
crossfire = "3.0"
either = { version = "1.15", features = ["serde"] }
getrandom = "0.3"
hex = "0.4"
hex-literal = "1.0"
inline-option = { version = "0.1", features = ["serde"] }
maplit = "1.0"
num-traits = "0.2"
once_cell = "1.21"
rand = "0.9"
rayon = "1.11"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sm3 = "0.4"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
trpl = "0.3"
uuid = { version = "1.19", features = ["v4", "v7"] }
